update ci variables

--- a/.github/workflows/build_custom_ubuntu_runner_image.yml
+++ b/.github/workflows/build_custom_ubuntu_runner_image.yml
@@ -63,10 +63,10 @@ jobs:
             -var="managed_image_resource_group_name=${{ secrets.IMAGE_RESOURCE_GROUP }}" \
             -var="image_os=${{ env.IMAGE_OS }}" \
             -var="build_resource_group_name=${{ secrets.BUILD_RG_NAME }}" \
-            -var="shared_image_gallery_destination.resource_group=${{ secrets.IMAGE_RESOURCE_GROUP }}" \
-            -var="shared_image_gallery_destination.gallery_name=${{ env.GALLERY_NAME }}" \
-            -var="shared_image_gallery_destination.image_name=${{ env.IMAGE_DEFINITION }}" \
-            -var="shared_image_gallery_destination.image_version=${{ env.IMAGE_VERSION }}" \
+            -var="gallery_name=${{ env.GALLERY_NAME }}" \
+            -var="gallery_resource_group_name=${{ secrets.IMAGE_RESOURCE_GROUP }}" \
+            -var="gallery_image_name=${{ env.IMAGE_DEFINITION }}" \
+            -var="gallery_image_version=${{ env.IMAGE_VERSION }}" \
             ${{ env.TEMPLATE_PATH }}
 
       - name: Build Image with Packer
@@ -80,8 +80,8 @@ jobs:
             -var="managed_image_resource_group_name=${{ secrets.IMAGE_RESOURCE_GROUP }}" \
             -var="image_os=${{ env.IMAGE_OS }}" \
             -var="build_resource_group_name=${{ secrets.BUILD_RG_NAME }}" \
-            -var="shared_image_gallery_destination.resource_group=${{ secrets.IMAGE_RESOURCE_GROUP }} \
-            -var="shared_image_gallery_destination.gallery_name=${{ env.GALLERY_NAME }}" \
-            -var="shared_image_gallery_destination.image_name=${{ env.IMAGE_DEFINITION }}" \
-            -var="shared_image_gallery_destination.image_version=${{ env.IMAGE_VERSION }}" \
+            -var="gallery_name=${{ env.GALLERY_NAME }}" \
+            -var="gallery_resource_group_name=${{ secrets.IMAGE_RESOURCE_GROUP }}" \
+            -var="gallery_image_name=${{ env.IMAGE_DEFINITION }}" \
+            -var="gallery_image_version=${{ env.IMAGE_VERSION }}" \
             ${{ env.TEMPLATE_PATH }}
