--- a/.github/workflows/build_custom_ubuntu_runner_image.yml
+++ b/.github/workflows/build_custom_ubuntu_runner_image.yml
@@ -11,16 +11,28 @@ jobs:
   build-image:
     runs-on: ubuntu-latest
     timeout-minutes: 360
+
+    strategy:
+      fail-fast: false
+      matrix:
+        include:
+          - image_os: ubuntu22
+            os_version: "22.04"
+            image_definition: "github-runner-ubuntu-2204"
+            base_sku: "22_04-lts-gen2"
+          - image_os: ubuntu24
+            os_version: "24.04"
+            image_definition: "github-runner-ubuntu-2404"
+            base_sku: "24_04-lts-gen2"
+
     env:
       LOCATION: switzerlandnorth
       PACKER_VERSION: "1.14.3"
       IMAGE_NAME: action-runner-ubuntu2404-${{ github.run_number }}
-      IMAGE_OS: ubuntu24
       GALLERY_NAME: "sigghaimagesswn"
-      IMAGE_DEFINITION: "github-runner-ubuntu-2404"
       TEMPLATE_PATH: images/ubuntu/templates/
-      BUILD_NAME: ubuntu-24_04.azure-arm.image
-      IMAGE_VERSION: "1.0.${{ github.run_number }}"
+      BUILD_NAME: ubuntu-${{ matrix.os_version }}.azure-arm.image
+      IMAGE_VERSION: "$$ {{ github.ref_name == 'main' && '1.0.' || '0.1.' }} $${{ github.run_number }}"
 
     steps:
       - name: Checkout repository
@@ -52,36 +64,38 @@ jobs:
         run: |
           packer fmt ${{ env.TEMPLATE_PATH }}
 
-      - name: Validate Packer template
+      - name: Validate Packer Template
         run: |
           packer validate \
             -only="${{ env.BUILD_NAME }}" \
             -var="use_azure_cli_auth=true" \
             -var="subscription_id=${{ secrets.AZURE_SUBSCRIPTION_ID }}" \
             -var="tenant_id=${{ secrets.AZURE_TENANT_ID }}" \
-            -var="managed_image_name=${{ env.IMAGE_NAME }}" \
+            -var="managed_image_name=${{ matrix.image_definition }}" \
             -var="managed_image_resource_group_name=${{ secrets.IMAGE_RESOURCE_GROUP }}" \
-            -var="image_os=${{ env.IMAGE_OS }}" \
+            -var="image_os=${{ matrix.image_os }}" \
             -var="build_resource_group_name=${{ secrets.BUILD_RG_NAME }}" \
             -var="gallery_name=${{ env.GALLERY_NAME }}" \
             -var="gallery_resource_group_name=${{ secrets.IMAGE_RESOURCE_GROUP }}" \
-            -var="gallery_image_name=${{ env.IMAGE_DEFINITION }}" \
+            -var="gallery_image_name=${{ matrix.image_definition }}" \
             -var="gallery_image_version=${{ env.IMAGE_VERSION }}" \
             ${{ env.TEMPLATE_PATH }}
 
       - name: Build Image with Packer
         run: |
+          echo "Building ${{ matrix.image_definition }} (Ubuntu ${{ matrix.os_version }}) - Version ${{ env.IMAGE_VERSION }}"
+
           packer build \
             -only="${{ env.BUILD_NAME }}" \
             -var="use_azure_cli_auth=true" \
             -var="subscription_id=${{ secrets.AZURE_SUBSCRIPTION_ID }}" \
             -var="tenant_id=${{ secrets.AZURE_TENANT_ID }}" \
-            -var="managed_image_name=${{ env.IMAGE_NAME }}" \
+            -var="managed_image_name=${{ matrix.image_definition }}" \
             -var="managed_image_resource_group_name=${{ secrets.IMAGE_RESOURCE_GROUP }}" \
-            -var="image_os=${{ env.IMAGE_OS }}" \
+            -var="image_os=${{ matrix.image_os }}" \
             -var="build_resource_group_name=${{ secrets.BUILD_RG_NAME }}" \
             -var="gallery_name=${{ env.GALLERY_NAME }}" \
             -var="gallery_resource_group_name=${{ secrets.IMAGE_RESOURCE_GROUP }}" \
-            -var="gallery_image_name=${{ env.IMAGE_DEFINITION }}" \
+            -var="gallery_image_name=${{ matrix.image_definition }}" \
             -var="gallery_image_version=${{ env.IMAGE_VERSION }}" \
             ${{ env.TEMPLATE_PATH }}
