--- a/.github/workflows/build_custom_ubuntu_runner_image.yml
+++ b/.github/workflows/build_custom_ubuntu_runner_image.yml
@@ -66,17 +66,14 @@ jobs:
           packer fmt ${{ env.TEMPLATE_PATH }}
 
       - name: Validate Packer Template
-        env:
-          ACTIONS_ID_TOKEN_REQUEST_TOKEN: ${{ env.ACTIONS_ID_TOKEN_REQUEST_TOKEN }}
-          ACTIONS_ID_TOKEN_REQUEST_URL: ${{ env.ACTIONS_ID_TOKEN_REQUEST_URL }}
         run: |
           packer validate \
             -only="${{ env.BUILD_NAME }}" \
             -var="client_id=${{ secrets.AZURE_CLIENT_ID }}" \
             -var="subscription_id=${{ secrets.AZURE_SUBSCRIPTION_ID }}" \
             -var="tenant_id=${{ secrets.AZURE_TENANT_ID }}" \
-            -var="oidc_request_token=${{ env.ACTIONS_ID_TOKEN_REQUEST_TOKEN }}" \
-            -var="oidc_request_url=${{ env.ACTIONS_ID_TOKEN_REQUEST_URL }}" \
+            -var="oidc_request_token=$ACTIONS_ID_TOKEN_REQUEST_TOKEN" \
+            -var="oidc_request_url=$ACTIONS_ID_TOKEN_REQUEST_URL" \
             -var="managed_image_name=${{ matrix.image_definition }}" \
             -var="managed_image_resource_group_name=${{ secrets.IMAGE_RESOURCE_GROUP }}" \
             -var="image_os=${{ matrix.image_os }}" \
@@ -88,9 +85,6 @@ jobs:
             ${{ env.TEMPLATE_PATH }}
 
       - name: Build Image with Packer
-        env:
-          ACTIONS_ID_TOKEN_REQUEST_TOKEN: ${{ env.ACTIONS_ID_TOKEN_REQUEST_TOKEN }}
-          ACTIONS_ID_TOKEN_REQUEST_URL: ${{ env.ACTIONS_ID_TOKEN_REQUEST_URL }}
         run: |
           echo "Building ${{ matrix.image_definition }} (Ubuntu ${{ matrix.os_version }}) - Version ${{ env.IMAGE_VERSION }}"
 
@@ -99,8 +93,8 @@ jobs:
             -var="client_id=${{ secrets.AZURE_CLIENT_ID }}" \
             -var="subscription_id=${{ secrets.AZURE_SUBSCRIPTION_ID }}" \
             -var="tenant_id=${{ secrets.AZURE_TENANT_ID }}" \
-            -var="oidc_request_token=${{ env.ACTIONS_ID_TOKEN_REQUEST_TOKEN }}" \
-            -var="oidc_request_url=${{ env.ACTIONS_ID_TOKEN_REQUEST_URL }}" \
+            -var="oidc_request_token=$ACTIONS_ID_TOKEN_REQUEST_TOKEN" \
+            -var="oidc_request_url=$ACTIONS_ID_TOKEN_REQUEST_URL" \
             -var="managed_image_name=${{ matrix.image_definition }}" \
             -var="managed_image_resource_group_name=${{ secrets.IMAGE_RESOURCE_GROUP }}" \
             -var="image_os=${{ matrix.image_os }}" \
