--- a/GitVersion.yml
+++ b/GitVersion.yml
@@ -5,7 +5,7 @@ branches:
   main:
     regex: ^main$
     mode: ContinuousDelivery
-    tag: ''
+    label: ''
     increment: Patch
     prevent-increment-of-merged-branch-version: true
     track-merge-target: false
@@ -16,7 +16,7 @@ branches:
   develop:
     regex: ^develop$
     mode: ContinuousDeployment
-    tag: beta
+    label: beta
     increment: Minor
     prevent-increment-of-merged-branch-version: false
     track-merge-target: true
@@ -27,7 +27,7 @@ branches:
   release:
     regex: ^release?[/-]
     mode: ContinuousDelivery
-    tag: rc
+    label: rc
     increment: None
     prevent-increment-of-merged-branch-version: true
     track-merge-target: false
@@ -38,7 +38,7 @@ branches:
   feature:
     regex: ^feature?[/-]
     mode: ContinuousDeployment
-    tag: alpha
+    label: alpha
     increment: Minor
     prevent-increment-of-merged-branch-version: false
     track-merge-target: false
@@ -49,7 +49,7 @@ branches:
   hotfix:
     regex: ^hotfix?[/-]
     mode: ContinuousDeployment
-    tag: hotfix
+    label: hotfix
     increment: Patch
     prevent-increment-of-merged-branch-version: false
     track-merge-target: false
