--- a/GitVersion.yml
+++ b/GitVersion.yml
@@ -7,9 +7,6 @@ branches:
     mode: ContinuousDelivery
     label: ''
     increment: Patch
-    prevent-increment-of-merged-branch-version: true
-    track-merge-target: false
-    tracks-release-branches: false
     is-release-branch: true
     is-mainline: true
   
@@ -18,44 +15,39 @@ branches:
     mode: ContinuousDeployment
     label: beta
     increment: Minor
-    prevent-increment-of-merged-branch-version: false
-    track-merge-target: true
-    tracks-release-branches: true
     is-release-branch: false
     is-mainline: false
   
   release:
-    regex: ^release?[/-]
+    regex: ^release[/-]
     mode: ContinuousDelivery
     label: rc
     increment: None
-    prevent-increment-of-merged-branch-version: true
-    track-merge-target: false
-    tracks-release-branches: false
     is-release-branch: true
     is-mainline: false
   
   feature:
-    regex: ^feature?[/-]
+    regex: ^features?[/-]
     mode: ContinuousDeployment
     label: alpha
     increment: Minor
-    prevent-increment-of-merged-branch-version: false
-    track-merge-target: false
-    tracks-release-branches: false
     is-release-branch: false
     is-mainline: false
   
   hotfix:
-    regex: ^hotfix?[/-]
+    regex: ^hotfix[/-]
     mode: ContinuousDeployment
     label: hotfix
     increment: Patch
-    prevent-increment-of-merged-branch-version: false
-    track-merge-target: false
-    tracks-release-branches: false
     is-release-branch: false
     is-mainline: false
+  
+  pull-request:
+    regex: ^(pull|pull\-requests|pr)[/-]
+    mode: ContinuousDeployment
+    label: pr
+    increment: Inherit
+    label-number-pattern: '[/-](?<number>\d+)'
 
 ignore:
   sha: []
@@ -68,4 +60,12 @@ patch-version-bump-message: '\+semver:\s?(fix|patch)'
 no-bump-message: '\+semver:\s?(none|skip)'
 
 tag-prefix: '[vV]'
-version-in-branch-regex: (?<version>[vV]?\d+(\.\d+)?(\.\d+)?).*
+version-in-branch-pattern: '(?<version>[vV]?\d+(\.\d+)?(\.\d+)?).*'
+
+# Semantic versioning output examples:
+# - main branch:     1.2.3
+# - develop branch:  1.3.0-beta.5
+# - feature branch:  1.3.0-alpha.12
+# - release branch:  1.3.0-rc.1
+# - hotfix branch:   1.2.4-hotfix.1
+# - PR:              1.3.0-pr.42.3
