--- a/.github/workflows/build_and_release.yml
+++ b/.github/workflows/build_and_release.yml
@@ -115,8 +115,8 @@ jobs:
       - name: Calculate Version
         id: gitversion
         uses: gittools/actions/gitversion/execute@v4.2.0
-        # with:
-        #   configFilePath: GitVersion.yml
+        with:
+          configFilePath: GitVersion.yml
 
       - name: Generate Semantic Version
         id: version
