--- a/.github/workflows/build_and_release.yml
+++ b/.github/workflows/build_and_release.yml
@@ -108,15 +108,15 @@ jobs:
           fetch-depth: 0
 
       - name: Install GitVersion
-        uses: gittools/actions/gitversion/setup@v4.2.0
+        uses: gittools/actions/gitversion/setup@v3.1.11
         with:
-          versionSpec: "6.4.x"
+          versionSpec: "6.0.5"
 
       - name: Calculate Version
         id: gitversion
-        uses: gittools/actions/gitversion/execute@v4.2.0
-        with:
-          configFilePath: GitVersion.yml
+        uses: gittools/actions/gitversion/execute@v3.1.11
+        # with:
+        #   configFilePath: GitVersion.yml
 
       - name: Generate Semantic Version
         id: version
