--- a/.github/workflows/build_and_release.yml
+++ b/.github/workflows/build_and_release.yml
@@ -37,7 +37,7 @@ on:
         default: false
 
 permissions:
-  contents: read
+  contents: write
   id-token: write
   pull-requests: write
   issues: write
